--- a/APIconAutenticacionBasica/APIconAutenticacionBasica.csproj
+++ b/APIconAutenticacionBasica/APIconAutenticacionBasica.csproj
@@ -1,8 +1,13 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <UserSecretsId>9e914d56-1a14-4309-b8ba-a99eb201eae5</UserSecretsId>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.3" />
+  </ItemGroup>
 
 
 </Project>
